<resources>
    <string name="app_name">सुवैरोमा </string>
    <string name="user_name">विशाल श्रेष्ठ </string>
    <string name="code">CODE</string>
    <string name="important_contacts">महत्त्वपूर्ण सम्पर्क ठेगानाहरू</string>
    <string name="nepal_embassay">नेपाली दूतावास</string>
    <string name="disclaimerHelper">कृपया प्रवासीलाई तलको पढिदिनु होला:\n\nनेपालबाट विदेशमा काम गर्न जाने धेरै व्यक्तिहरू शोषणमा पर्ने गर्दछन् । उनीहरू ठगिन्छन्, गाह्रो अवस्थाहरूमा काम गर्न बाध्य पारिन्छन्, पिटिन्छन्, उनीहरूले भनेको तलब र सुविधा पाउने गर्दैनन् र कति त यतना र यौनशोषणमा पर्नेगर्दछन् । कति विदेशमा थुनामा पर्दछन् त कतिले आत्माहत्या गर्नेगर्दछन् । यो एपले वैदेशिक रोजगारीमा जान चाहाने नेपालीहरूलाई ठगि र शोषणबाट बचेर सुरक्षित र लाभदायक रोजगारी पत्ता लगाउन सहायता गर्दछ तर सुरक्षाको भने पूर्ण सुनिश्चितता गर्दैन ।</string>
    <string name="disclaimerMigrant">नेपालबाट विदेशमा काम गर्न जाने धेरै व्यक्तिहरू शोषणमा पर्ने गर्दछन् । उनीहरू ठगिन्छन्, गाह्रो अवस्थाहरूमा काम गर्न बाध्य पारिन्छन्, पिटिन्छन्, उनीहरूले भनेको तलब र सुविधा पाउने गर्दैनन् र कति त यातना र यौनशोषणमा पर्नेगर्दछन् । कति विदेशमा थुनामा पर्दछन् त कतिले आत्माहत्या गर्नेगर्दछन् । यो एपले वैदेशिक रोजगारीमा जान चाहाने नेपालीहरूलाई ठगि र शोषणबाट बचेर सुरक्षित र लाभदायक रोजगारी पत्ता लगाउन सहायता गर्दछ तर सुरक्षाको भने पूर्ण सुनिश्चितता गर्दैन ।</string>
    <string name="disclaimer_button">मैले बुझे</string>
    <string name="disclaimer_title">प्रतिदावी</string>
    <string name="finalAnswerVerificationTitle">अघि बढ्नु पहिले</string>
    <string name="finalAnswerVerification">तपाईँले यस सुवैरोमा एपको वैदेशिक रोजगारी तयारी भाग पुरा गर्नुभएको छ । अगाडि बढ्नुभन्दा पहिले तपाईँले दिनुभएका उत्तरहरू परिवर्तन गर्दिन भनेर स्वीकार्नुपर्दछ । यदि तपाईँले कुनै खण्डको उत्तर परिवर्तन गर्नुपरेमा अहिले गर्नुहोला । उत्तरहरू परिवर्तन गर्नुहुन्न भने तल चिनो लगाउनुहोस् ।.</string>
    <string name="finalAnswerButton">तपाईं आफ्नो जवाफ परिवर्तन गर्न सक्षम हुनुहुने छैन ।</string>
    <string name="opt_message">तपाईँले दिनुभएको फोनमा हामीले OTP कोड SMS गरेर पठाँउदैछौँ । कृपया त्यो OTP कोड तल राख्नुहोस् । यो कोड प्राप्त हुन १ मिनेट जस्तो लाग्नसक्छ ।</string>
    <string name="next">अगाडि बढ्नु</string>
    <string name="proceed">अगाडि बढ्नु</string>
    <string name="back">फिर्ता</string>
    <string name="okay">ठीक छ</string>
    <string name="yes">हो</string>
    <string name="no">होइन</string>
    <string name="understand">मैले बुझें</string>
    <string name="write_here">Write here...</string>
    <string name="mig_delete_confirmation">के तपाईं पक्का प्रवासी मेटाउन चाहनुहुन्छ?</string>
    <string name="about_us">हाम्रोबारे</string>
    <string name="feedback_trial">एपको यो सेक्शनले तपाईंलाई कसरी मद्दत गर्यो?</string>
    <string name="support">समर्थन</string>
    <string name="send">पठाउनुहोस्</string>
    <string name="enter_query">आफ्नो प्रश्न प्रविष्ट गर्नुहोस्</string>
    <string name="check_one">एक चयन गर्नुहोस्</string>
    <string name="error">होसियार</string>
    <string name="no_otp_receiption">Didn\'t receive OTP?</string>
    <string name="no_otp_try_again">Send Code Again</string>
    <string name="no_otp_patient">Please be patient, You should receive the code in about 1 minute.</string>
    <string name="choose_another_country">अर्को देश छनौट गर्नुहोस्</string>
    <string name="blacklisted">प्रतिबन्धित</string>
    <string name="blacklisted_message">यो देश प्रतिबन्धित छ</string>
    <string name="not_open">खुला छैन</string>
    <string name="not_open_message">यो देश खुला छैन</string>
    <string name="go_regardless">जान चाहन्छु</string>
    <string name="select_country">कृपया देश चयन गर्नुहोस्</string>
    <string name="confirm_message">तपाइँ निश्चित हुनुहुन्छ कि तपाइँको गन्तव्य हो</string>
    <string name="confirm">निश्चित गर्नुहोस्</string>
    <string name="select_migrant">प्रवासी चयन गर्नुहोस्</string>
    <string name="not_started">अहिले सम्म सुरू भएको छैन</string>
    <string name="take_photo">तस्बिर खिच्नुहोस्</string>
    <string name="choose_from_gallery">गैलरीबाट छान्नुहोस्</string>
    <string name="edit_profile">सम्पादन गर्नु</string>
    <string name="edit_migrant">प्रवासी सम्पादन गर्नु</string>
    <string name="save">भयो</string>
    <string name="add_migrant">प्रवासी थप्नु</string>
    <string name="register">दर्ता गर्नुहोस्</string>
    <string name="helper">म अरूलाई सहयोग गर्दैछु</string>
    <string name="aspiringmigrant">म इच्छुक प्रवासी हुँ</string>
    <string name="under18_message">१८ वर्ष मुनिकाहरू वैदेशिक रोजगारका लागि जानु गैरकानुनी हो ।</string>
    <string name="going_to">जाँदै</string>
    <string name="unlock_next">जान तयार छु</string>
    <string name="need_help">सहयोग चाहियो?</string>
    <string name="migrants_name">प्रवासीको नाम</string>
    <string name="full_name">पुरा नाम</string>
    <string name="migrants_phone_number">प्रवासीको फोन नम्बर</string>
    <string name="phone_number">फोन नम्बर</string>
    <string name="migrants_age">प्रवासीको उमेर</string>
    <string name="age">उमेर</string>
    <string name="gender">लिङ्ग</string>
    <string name="male">पुरुष</string>
    <string name="female">महिला</string>
    <string name="or">वा</string>
    <string name="already_registered">पहिले नै दर्ता गरिएको</string>
    <string name="facebook_login">फेसबुक लगइन</string>
    <string name="logout">लोग आउट</string>
    <string name="server_noconnect">सर्भरसँग सम्पर्क गर्न असमर्थ</string>
    <string name="choose_one">एक छान्नुहोस्</string>
    <string name="getting_mig_details">प्रवासीको विवरण प्राप्त हुँदैछ</string>
    <string name="checking_registration">दर्ता जाँच हुँदैछ</string>
    <string name="getting_mig_responses">प्रवासीको प्रतिक्रियाहरू प्राप्त हुँदैछ</string>
    <string name="registering">दर्ता हुँदैछ</string>
    <string name="adding_fb_acc">फेसबुक अकाउन्ट थप हुँदैछ</string>
    <string name="updating">नयाँ विवरण प्राप्त हुँदैछ</string>
    <string name="sending_otp">OTP पठाँइदैछ</string>
    <string name="feedback_msg">कृपया एउटा छानेर हामीलाई सेवा सुधार गर्ने मौका दुनुहोस् </string>
    <string name="feedback_msg_new">Check all that apply</string>
    <string name="login">लगइन</string>
    <string name="enter_reg_number">तपाईँले दर्ता गर्न प्रयोग गर्नुभएको फोन नम्बर राख्नुहोस्</string>
    <string name="verify_phone">प्रमाणित गर्नुहोस्</string>
    <string name="change_number">फोन नम्बर परिवर्तन गर्नुहोस्</string>
    <string name="verify_code">प्रमाणित गर्नुहोस्</string>
    <string name="done">भयो</string>
    <string name="cancel">बन्द</string>
    <string name="login_with_phone">फोन नम्बर प्रयोग गरी लग इन गर्नुहोस्</string>
    <string name="login_with_fb">फेसबुक प्रयोग गरी लग इन गर्नुहोस्</string>
    <string name="loading_text">लोड हुँदैछ</string>
    <string name="email">इमेल</string>
    <string name="website">वेबसाइट</string>
    <string name="address">ठेगाना</string>
    <string name="video">भिडियो</string>
    <string name="call">कल गर्नुहोस्</string>
    <string name="need_support">समर्थन</string>
    <string name="server_client_id">314459802718-g7h1afueob225oa9pe1v6vgh8si7uro9.apps.googleusercontent.com</string>
    <string name="google_continue">Continue with Google</string>
    <string name="facebook_app_id">118900038809550</string>
    <string name="fb_login_protocol_scheme">fb118900038809550</string>
    <string name="failed_user_update">प्रयोगकर्ता विवरण अपडेट गर्न असफल भयो</string>
    <string name="fb_connected">फेसबुकसँग जोडिएको</string>
    <string name="connect_to_fb">फेसबुकसँग जोड्नुहोस्</string>
    <string name="contact_us">हामीलाई सम्पर्क गर्नुहोस</string>
    <string name="faqs">बारम्बार सोधिने प्रश्नहरू</string>
    <string name="not_being_helped">Not being helped</string>
    <string name="j_country">COUNTRY</string>
    <string name="country">DESTINATION COUNTRY</string>
    <string name="complete">Complete</string>
    <string name="preparation">PREPARATION</string>
    <string name="travel">TRAVEL</string>
    <string name="section_locked">Section Locked</string>
    <string name="welcome_info">Welcome to SaFE app</string>
    <string name="complete_message">This section is complete, would you like to move on to the next section?</string>
    <string name="saving_query">Saving Query</string>
    <string name="infostep1">तपाईंले जाने योजना बनाउनु भएको देश चयन गर्नुहोस्</string>
    <string name="infostep2">Check if you are fully prepared</string>
    <string name="infostep3">Check if you are ready to travel</string>
    <string name="about_us_content">SaFE was developed by Tiny Hands Nepal, an NGO dedicated to fighting Nepal\'s greatest injustices. THN has been working in Nepal since 2005 and has helped prevent over 15,000 Nepali citizens from being trafficked into modern day slavery. This app was designed in light of our extensive experience and with your well-being in mind</string>
    <string name="fq1">Why do I need to use this app?</string>
    <string name="fq2">How do I find a good manpower agency?</string>
    <string name="fq3">Can I use an agent? (Is it safe to use an agent?)</string>
    <string name="fq4">Why do you need my contact information?</string>
    <string name="fq5">What are the red flags I\'m seeing?</string>
    <string name="fq6">What does the help button do?</string>
    <string name="fq7">How do I advance from the Preparation section to the Travel section?</string>
    <string name="fq8">If I don\'t reach 100% completion for the Preparation section, what happens?</string>
    <string name="fqa1">This app will help you protect yourself from becoming a victim of fraud, human trafficking, and/or human smuggling while you pursue foreign employment.</string>
    <string name="fqa2">You can find a manpower agency in newspapers, navigating to the DOFE website (www.bit.ly/dofenepal) and on job listing websites such as www.baideshikrojgari.com.  If the the agency has an active registration and status then you should feel free to use them. You can determine the status by visiting the DoFE website specifically. If the manpower agency provides you with a demand letter, a LOT NUMBER (LT NO) and sense workers overseas then you can generally trust they are reliable.</string>
    <string name="fqa3">No, It is not safe to use an agent for foreign employment unless he/she has a valid license from DOFE. If you use an agent your cost will be and chance of exploitation high.</string>
    <string name="fqa4">Your contact information allows us to contact you if we notice any potential problems or red flags with your migration plans. If there is a chance your safety is at risk we want to let you know</string>
    <string name="fqa5">The red flags represent potential problems or areas of risk with your migration plan. Those might be problems based on our vast experience with human trafficking and exploitation, or government regulations and requirements.</string>
    <string name="fqa6">By clicking the help button you will be connected to one of our Nepali staff immediately. It will then be their priority to make sure you receive the help you need</string>
    <string name="fqa7">Once you complete the Preparation section with all of the information you have available and are ready to purchase your tickets for travel, then click on the Travel icon on the main app screen. You will be asked if you are sure you want to advance. By clicking yes, you agree to not go back and edit your responses. You will then be able to complete the Travel section.</string>
    <string name="fqa8">Reaching 100% completion is important, but not required to advance to the Travel section. Reaching 100% will ensure we have the most accurate and complete information to assist you with your plans.</string>
    <string name="delete_migrant">Delete This Migrant</string>
    <string name="watch_tutorial">Watch Tutorial</string>
    <string name="answered">Answered</string>
    <string name="questions">Questions</string>
    <string name="updateUserType">Update User Type</string>
</resources>