<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/mainNavOpt">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_avatar"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_addmigrants"
            android:icon="@drawable/ic_add"
            android:title="@string/add_migrant" />
        <item
            android:id="@+id/delete_migrant"
            android:icon="@drawable/ic_delete_nav"
            android:title="@string/delete_migrant" />
        <item
            android:id="@+id/update_usertype"
            android:title="@string/updateUserType" />

    </group>
    <group android:id="@+id/secondaryNavOpt">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faqs" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_tutorial"
            android:title="@string/watch_tutorial" />
    </group>

</menu>