<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/medium_margin"
        android:text="@string/choose_one"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@color/colorPrimaryDark" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp">

        <RadioButton
            android:id="@+id/rbMigrant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/aspiringmigrant"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbHelper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/helper"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnChosen"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/default_button_accent"
        android:text="@string/next"
        android:textColor="@android:color/white" />
</LinearLayout>