<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/default_margin"
    android:paddingRight="@dimen/default_margin"
    android:paddingTop="@dimen/default_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTermHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalAnswerVerificationTitle"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:lineSpacingExtra="5sp"
        android:text="@string/finalAnswerVerification"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/darkGrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkboxTermsAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvCheckTerm"
            android:gravity="center"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finalAnswerButton"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="@dimen/default_button_width"
        android:layout_height="@dimen/default_button_height"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/default_rounded_button"
        android:text="@string/proceed"
        android:textColor="@color/bgFaded" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="@dimen/default_button_width"
        android:layout_height="@dimen/default_button_height"
        android:background="@drawable/default_rounded_button_accent"
        android:text="@string/back"
        android:layout_marginBottom="@dimen/default_margin"
        android:textColor="@color/bgFaded" />
</LinearLayout>