<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/verify_phone"
                android:textAllCaps="true"
                android:textColor="#fff" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/ivOTP"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:src="@drawable/ic_phone_otp" />

    <com.vysh.subairoma.utils.CustomTextView
        android:id="@+id/tvOPtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivOTP"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/default_line_spacing"
        android:padding="16dp"
        android:text="@string/opt_message"
        app:fonts="gotham_light.ttf" />

    <EditText
        android:id="@+id/etCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOPtMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:background="@drawable/bg_edittext"
        android:hint="@string/code"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:padding="8dp" />

    <com.vysh.subairoma.utils.CustomTextView
        android:id="@+id/noOtpMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/no_otp_receiption"
        app:fonts="gotham_medium.ttf" />

    <Button
        android:id="@+id/btnSendOTPAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noOtpMsg"
        android:layout_centerHorizontal="true"
        android:background="?attr/selectableItemBackground"
        android:text="@string/no_otp_try_again" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnChangeNumber"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginRight="@dimen/card_small_margin"
            android:layout_weight="1"
            android:background="@drawable/default_rounded_button_accent"
            android:text="@string/change_number"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnVerify"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginLeft="@dimen/card_small_margin"
            android:layout_weight="1"
            android:background="@drawable/default_rounded_button"
            android:text="@string/verify_code"
            android:textColor="#fff" />
    </LinearLayout>
</RelativeLayout>