<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/backdrop"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:background="@color/colorPrimaryDark" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="#fff" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/ivRegister"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:src="@drawable/register_green" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ivRegister"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/llForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!--<com.vysh.subairoma.utils.CustomTextView
                android:id="@+id/tvHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:gravity="center"
                android:text="Please enter your details"
                android:textSize="16sp"
                app:font="gotham_light.ttf" />-->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:padding="@dimen/default_margin"
                app:cardCornerRadius="@dimen/card_view_tile_radius"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin"
                        android:background="@null"
                        android:hint="@string/full_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="25" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="@dimen/default_margin"
                        android:background="@color/grey" />

                    <EditText
                        android:id="@+id/etNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:background="@null"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="@dimen/default_margin"
                        android:background="@color/grey" />

                    <EditText
                        android:id="@+id/etAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:background="@null"
                        android:hint="@string/age"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="2" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="@dimen/default_margin"
                        android:background="@color/grey" />

                    <RadioGroup
                        android:id="@+id/rbGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:layout_marginStart="@dimen/default_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/default_margin"
                            android:text="@string/gender"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/rbMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/rbFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/female" />
                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="@dimen/default_button_width"
                android:layout_height="@dimen/default_button_height"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/default_rounded_button"
                android:text="@string/next"
                android:textColor="#fff" />

            <com.vysh.subairoma.utils.CustomTextView
                android:id="@+id/tvOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_large_margin"
                android:text="@string/or"
                app:fonts="gotham_light.ttf" />

            <Button
                android:id="@+id/btnAlreadyRegistered"
                android:layout_width="@dimen/default_button_width"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/already_registered"
                android:textColor="@color/grey" />

            <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/default_margin"
                facebook:com_facebook_login_text="@string/facebook_login"
                facebook:com_facebook_logout_text="@string/logout" />

            <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_button_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:visibility="gone"
                facebook:com_facebook_login_text="@string/facebook_login"
                facebook:com_facebook_logout_text="@string/logout" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>